# VaspFileInspector

./: BC8-mp.poscar  README.md  lattice.py  neighbors.py  pyproject.toml  reader.py  vfi.py
src/vaspfileinspector/: __init__.py  atoms.py  cli.py  common.py  lattice.py  neighbors.py  oldpoints.py  reader.py
